fix: pre-commit

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -12,7 +12,7 @@ env:
 jobs:
   collectInputs:
     name: Collect workflow inputs
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     outputs:
       directories: ${{ steps.dirs.outputs.directories }}
     steps:
@@ -26,7 +26,7 @@ jobs:
   preCommitMinVersions:
     name: Min TF pre-commit
     needs: collectInputs
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     strategy:
       matrix:
         directory: ${{ fromJson(needs.collectInputs.outputs.directories) }}
@@ -58,7 +58,7 @@ jobs:
 
   preCommitMaxVersion:
     name: Max TF pre-commit
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: collectInputs
     steps:
       - name: Checkout
