feat: Initial commit

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 *.tfstate
 *.tfstate.*
 
+# TF cache
+.tfcache
+
 # Crash log files
 crash.log
 
@@ -12,7 +15,7 @@ crash.log
 # .tfvars files are managed as part of configuration and so should be included in
 # version control.
 #
-terraform.tfvars
+# terraform.tfvars
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
@@ -29,5 +32,17 @@ override.tf.json
 # example: *tfplan*
 .terraform.lock.hcl
 
+# Python
+__pycache__
+
+# Testing artefacts
+tf_resources.json
+test-rsa.*
+.out
+*.tar.gz
+
 # VSCode
 *.code-workspace
+
+# Apple
+.DS_Store
