--- a/modules/user_data/cloud-init.yaml
+++ b/modules/user_data/cloud-init.yaml
@@ -7,9 +7,11 @@
 
 users:
   - default
+%{~ if length(SSH_AUTHORIZED_KEY) > 0 }
   - name: ec2-user
-    ssh_authorized_keys: %{ for key in ssh_authorized_keys }
-      - ssh-rsa ${key}%{ endfor }
+    ssh_authorized_keys:
+      - ssh-rsa ${SSH_AUTHORIZED_KEY}
+%{~ endif }
 
 # Update apt database on first boot (run 'apt-get update').
 # Note, if packages are given, or package_upgrade is true, then
@@ -67,11 +69,11 @@ runcmd:
   - sudo chown -R ec2-user:ec2-user /home/ec2-user/
 
   # register
-  - PERSONAL_ACCESS_TOKEN=`aws ssm get-parameter --with-decryption --name ${ssm_parameter_name} --region ${region} | jq -r '.Parameter.Value'`
+  - PERSONAL_ACCESS_TOKEN=`aws ssm get-parameter --with-decryption --name ${AWS_SSM_PARAMETER_NAME} --region ${AWS_REGION} | jq -r '.Parameter.Value'`
   - >
-    TOKEN_RESPONSE=`curl -X POST -H "Accept: application/vnd.github+json" -H "Authorization: token $PERSONAL_ACCESS_TOKEN" https://api.github.com/orgs/${github_organisation_name}/actions/runners/registration-token`
+    TOKEN_RESPONSE=`curl -X POST -H "Accept: application/vnd.github+json" -H "Authorization: token $PERSONAL_ACCESS_TOKEN" https://api.github.com/orgs/${GITHUB_ORGANISATION_NAME}/actions/runners/registration-token`
   - TOKEN=`echo $TOKEN_RESPONSE | jq -r '.token'`
-  - su ec2-user -c "/home/ec2-user/actions-runner/config.sh --url '${url}' --unattended --token $TOKEN"
+  - su ec2-user -c "/home/ec2-user/actions-runner/config.sh --url '${GITHUB_URL}' --unattended --token $TOKEN"
 
   ############################################
   # extra stuff the runner needs to run our CI
