--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,17 @@
 # https://pre-commit.com/
 # brew install pre-commit
 # brew install tflint
+# pre-commit autoupdate
 # pre-commit install
+# pre-commit run --all-files
 repos:
+  - repo: local
+    hooks:
+      - id: terraform init
+        name: terraform init
+        entry: terraform init
+        language: system
+        pass_filenames: false
   - repo: https://github.com/antonbabenko/pre-commit-terraform
     rev: v1.74.1
     hooks:
@@ -27,12 +36,33 @@ repos:
           - '--args=--only=terraform_required_providers'
           - '--args=--only=terraform_standard_module_structure'
           - '--args=--only=terraform_workspace_remote'
+  - repo: https://github.com/psf/black
+    rev: 22.6.0
+    hooks:
+    - id: black
   - repo: https://github.com/pycqa/flake8
-    rev: 3.7.9
+    rev: 5.0.4
     hooks:
     - id: flake8
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
     hooks:
+      - id: check-added-large-files
+      - id: check-case-conflict
       - id: check-merge-conflict
+      - id: detect-private-key
       - id: end-of-file-fixer
+      - id: mixed-line-ending
+      - id: name-tests-test
+      - id: no-commit-to-branch
+        args: [--branch, develop, --branch, main]
+      - id: requirements-txt-fixer
+
+  - repo: local
+    hooks:
+      - id: pytest
+        name: pytest
+        entry: bash -c 'pytest'
+        language: system
+        always_run: true
+        pass_filenames: false
