feat: Customised packages

--- a/modules/user_data/cloud-init.yaml
+++ b/modules/user_data/cloud-init.yaml
@@ -28,11 +28,9 @@ packages:
   - awscli
   - jq
   - libdigest-sha-perl
-  ############################################
-  # extra stuff
-  ############################################
-  - docker
-  - python3
+%{~ for PACKAGE in PACKAGES }
+  - ${PACKAGE}
+%{~ endfor }
   ###########################################
 
 write_files:
