--- a/modules/user_data/cloud-init.yaml
+++ b/modules/user_data/cloud-init.yaml
@@ -60,14 +60,13 @@ write_files:
 runcmd:
   ###########################################
   # Extra runcmds
-  - echo Extra runcmds
+  - echo **** EXTRA RUNCMDS ****
 %{~ for X in RUNCMDS }
   - ${X}
 %{~ endfor }
-  - echo Extra runcmds DONE
   ###########################################
-  ###########################################
-
+  ########################################### 
+  - echo **** RUNNER ****
   # install this
   - mkdir actions-runner && cd actions-runner
   - curl -o actions-runner-linux-x64-2.294.0.tar.gz -L 'https://github.com/actions/runner/releases/download/v2.294.0/actions-runner-linux-x64-2.294.0.tar.gz'
@@ -94,6 +93,7 @@ runcmd:
 
   ###########################################
   # Other
+  - echo **** OTHER ****
 %{~ if length(OTHER) > 0 }
 ${OTHER}
 %{~ endif }
