--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: ⚙️ Main ⚙️
+name: 🚀 Main 🚀
 
 on:
   pull_request:
@@ -22,13 +22,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
-        with:
-          python-version: 3.10.4 
-      - run: |
-          python -m pip install --upgrade pip
-          pip install flake8==4.0.1
-      - run: |
-          flake8 --count --max-complexity=10 --max-line-length=90 --statistics
+      - uses: py-actions/flake8@v2
 
   terraform_lint:
     name: 🏗 Terraform file format
@@ -58,7 +52,11 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
 
+      name: 🚧 Set up environment
+      - run: python -m venv .venv && source .venv/bin/activate
+
       - run: pip install -r requirements-dev.txt
+      name: 🚦 Run tests
       - run: pytest --log-level INFO
         env:
           PYTEST_ADDOPTS: "--color=yes"
