--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,12 +52,13 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
 
-      name: 🚧 Set up environment
-      - run: python -m venv .venv && source .venv/bin/activate
+      - name: 🚧 Set up environment
+        run: python -m venv .venv && source .venv/bin/activate
 
       - run: pip install -r requirements-dev.txt
-      name: 🚦 Run tests
-      - run: pytest --log-level INFO
+      
+      - name: 🚦 Run tests
+        run: pytest --log-level INFO
         env:
           PYTEST_ADDOPTS: "--color=yes"
         timeout-minutes: 5
