--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,9 +37,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - run: python -m venv .venv && source .venv/bin/activate
-
-      - uses: pre-commit/action@v3.0.0
-
+      - run: pip install -t requirements-dev.txt
+      - run: pre-commit install && pre-commit run --all-files
       - run: pytest --log-level INFO
         env:
           PYTEST_ADDOPTS: "--color=yes"
