--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -44,7 +44,9 @@
 	},
 
 	"extensions": [
-		"mutantdino.resourcemonitor",
-		"ms-python.python"
+		"hashicorp.terraform",
+		"redhat.vscode-yaml",
+		"ms-python.python",
+		"mutantdino.resourcemonitor"
 	]
 }
