--- a/modules/user_data/cloud-init.yaml
+++ b/modules/user_data/cloud-init.yaml
@@ -47,7 +47,7 @@ runcmd:
   - TOKEN=`echo $TOKEN_RESPONSE | jq -r '.token'`
   - su ubuntu -c "/home/ubuntu/actions-runner/config.sh --url '${GITHUB_URL}' --unattended --token $TOKEN ${ARG_NAME} ${ARG_RUNNERGROUP} ${ARG_LABELS}"
   # Install as service
-  - cd /home/ubuntu/actions-runner/ && su ubuntu -c "sudo bash ./svc.sh install ubuntu"
+  - su ubuntu -c "cd /home/ubuntu/actions-runner/ && sudo bash ./svc.sh install ubuntu"
   - echo ==== ACTIONS-RUNNER DONE ====
 
 power_state:
