--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
     name: 🏗 Terraform file format
     runs-on: self-hosted
     steps:
+      - uses: hashicorp/setup-terraform@v2
       - uses: dflook/terraform-fmt-check@v1
         with:
           path: .
@@ -38,6 +39,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
+      - uses: hashicorp/setup-terraform@v2
       - run: |
           python -m venv .venv && source .venv/bin/activate
           pip install -r requirements-dev.txt
