--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -63,7 +63,7 @@ repos:
     hooks:
       - id: pytest
         name: pytest
-        entry: bash -c 'pytest'
+        entry: bash -c 'pytest -m "not slow"'
         language: system
         always_run: true
         pass_filenames: false
