--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,8 @@ jobs:
       - run: |
           python -m venv .venv && source .venv/bin/activate
           pip install -r requirements.txt
-          pre-commit install && pre-commit run --all-files
+          pre-commit install
+          pre-commit run --all-files
           pytest
         env:
           PYTEST_ADDOPTS: "--color=yes"
