--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/setup-python@v2
       - run: |
           python -m venv .venv && source .venv/bin/activate
-          pip install -r requirements-dev.txt
+          pip install -r requirements.txt
           flake8
           black .
 
@@ -42,9 +42,10 @@ jobs:
       - uses: hashicorp/setup-terraform@v2
       - run: |
           python -m venv .venv && source .venv/bin/activate
-          pip install -r requirements-dev.txt
-          pre-commit install && pre-commit run --all-files
-          pytest --log-level INFO
+          pip install -r requirements.txt
+          pre-commit install
+          pre-commit run
+          pytest
         env:
           PYTEST_ADDOPTS: "--color=yes"
         timeout-minutes: 5
