--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,20 @@
 # pre-commit install
 # pre-commit run --all-files
 repos:
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.3.0
+    hooks:
+      - id: check-added-large-files
+      - id: check-case-conflict
+      - id: check-merge-conflict
+      - id: detect-private-key
+      - id: end-of-file-fixer
+      - id: mixed-line-ending
+      - id: name-tests-test
+      # Causes PRs to main to fail
+      #- id: no-commit-to-branch
+      #  args: [--branch, develop, --branch, main]
+      - id: requirements-txt-fixer
   - repo: local
     hooks:
       - id: terraform init
@@ -44,26 +58,11 @@ repos:
     rev: 5.0.4
     hooks:
     - id: flake8
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.3.0
-    hooks:
-      - id: check-added-large-files
-      - id: check-case-conflict
-      - id: check-merge-conflict
-      - id: detect-private-key
-      - id: end-of-file-fixer
-      - id: mixed-line-ending
-      - id: name-tests-test
-      # Causes PRs to main to fail
-      #- id: no-commit-to-branch
-      #  args: [--branch, develop, --branch, main]
-      - id: requirements-txt-fixer
-
   - repo: local
     hooks:
       - id: pytest
         name: pytest
-        entry: bash -c 'pytest'
+        entry: bash -c 'pytest -m "not slow"'
         language: system
         always_run: true
         pass_filenames: false
