--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ crash.log
 # .tfvars files are managed as part of configuration and so should be included in
 # version control.
 #
-terraform.tfvars
+# terraform.tfvars
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
