--- a/modules/user_data/cloud-init-ephemeral.yaml
+++ b/modules/user_data/cloud-init-ephemeral.yaml
@@ -30,7 +30,7 @@ write_files:
     [ "$#" -eq 1 ] || die "1 argument required, $# provided."
     RUN=$1
     cp -R /home/ubuntu/actions-runner /home/ubuntu/actions-runner-$RUN
-    PERSONAL_ACCESS_TOKEN=`aws ssm get-parameter --with-decryption --name ${SSM_PARAMETER_NAME} --region ${SSM_REGION} | jq -r '.Parameter.Value'`
+    PERSONAL_ACCESS_TOKEN=`aws ssm get-parameter --with-decryption --name ${SSM_PARAMETER_NAME} --region ${REGION} | jq -r '.Parameter.Value'`
     [ "$PERSONAL_ACCESS_TOKEN" != "" ] || die "Unable to retrieve access token."
     TOKEN_RESPONSE=`curl -s -X POST -H "Accept: application/vnd.github+json" -H "Authorization: token $PERSONAL_ACCESS_TOKEN" "https://api.github.com/orgs/${GITHUB_ORGANISATION_NAME}/actions/runners/registration-token"`
     TOKEN=`echo $TOKEN_RESPONSE | jq -r '.token'`
@@ -64,6 +64,19 @@ write_files:
     ExecStart=/home/ubuntu/ephemeral_runner_svc.sh
     [Install]
     WantedBy=multi-user.target
+%{~ if length(CLOUDWATCH_LOG_GROUP) > 0 }
+- path: awslogs.conf
+  content: |
+    [general]
+    state_file = /var/awslogs/state/agent-state
+    [/var/log/syslog]
+    datetime_format = %Y-%m-%d %H:%M:%S
+    file = /var/log/syslog
+    buffer_duration = 5000
+    log_stream_name = {instance_id}
+    initial_position = start_of_file
+    log_group_name = ${CLOUDWATCH_LOG_GROUP}/var/log/syslog
+%{~ endif }
 %{~ for X in WRITE_FILES }
 - ${X}
 %{~ endfor }
@@ -74,6 +87,10 @@ runcmd:
 %{~ for X in RUNCMDS }
 - ${X}
 %{~ endfor }
+%{~ if length(CLOUDWATCH_LOG_GROUP) > 0 }
+- curl https://s3.amazonaws.com/aws-cloudwatch/downloads/latest/awslogs-agent-setup.py -O
+- python2 ./awslogs-agent-setup.py -r ${REGION} -n
+%{~ endif }
 # ##########################################
 # ########################################## 
 - echo ==== ACTIONS-RUNNER ====
