--- a/modules/user_data/cloud-init.yaml
+++ b/modules/user_data/cloud-init.yaml
@@ -26,6 +26,7 @@ package_reboot_if_required: true
 packages:
 - awscli
 - jq
+- cloud-utils
 # ##########################################
 # Extra packages
 %{~ for X in PACKAGES }
@@ -85,7 +86,8 @@ runcmd:
 # Install as service
 - cd /home/ubuntu/actions-runner/ && bash ./svc.sh install ubuntu
 - echo ==== ACTIONS-RUNNER DONE ====
-
+- INSTANCE_ID=`ec2metadata --instance-id`
+- aws ec2 create-tags --region ${REGION} --resources $INSTANCE_ID --tags Key=terraform-aws-github-runner:setup,Value=done
 power_state:
   mode: reboot
 
