--- a/modules/user_data/cloud-init-ephemeral.yaml
+++ b/modules/user_data/cloud-init-ephemeral.yaml
@@ -13,6 +13,7 @@ packages:
 - awscli
 - jq
 - parallel
+- cloud-utils
 # ##########################################
 # Extra packages
 %{~ for X in PACKAGES }
@@ -30,7 +31,7 @@ write_files:
     [ "$#" -eq 1 ] || die "1 argument required, $# provided."
     RUN=$1
     cp -R /home/ubuntu/actions-runner /home/ubuntu/actions-runner-$RUN
-    PERSONAL_ACCESS_TOKEN=`aws ssm get-parameter --with-decryption --name ${SSM_PARAMETER_NAME} --region ${SSM_REGION} | jq -r '.Parameter.Value'`
+    PERSONAL_ACCESS_TOKEN=`aws ssm get-parameter --with-decryption --name ${SSM_PARAMETER_NAME} --region ${REGION} | jq -r '.Parameter.Value'`
     [ "$PERSONAL_ACCESS_TOKEN" != "" ] || die "Unable to retrieve access token."
     TOKEN_RESPONSE=`curl -s -X POST -H "Accept: application/vnd.github+json" -H "Authorization: token $PERSONAL_ACCESS_TOKEN" "https://api.github.com/orgs/${GITHUB_ORGANISATION_NAME}/actions/runners/registration-token"`
     TOKEN=`echo $TOKEN_RESPONSE | jq -r '.token'`
@@ -46,13 +47,17 @@ write_files:
     #!/bin/bash
     # Cleanup leftovers if instance was rebooted
     rm -rf /home/ubuntu/actions-runner-*
+    INSTANCE_ID=`ec2metadata --instance-id`
+    aws ec2 create-tags --region ${REGION} --resources $INSTANCE_ID --tags Key=terraform-aws-github-runner:setup,Value=done
 %{~ if PARALLEL_RUNNER_COUNT == -1 }
     JOBS=`nproc`
-    echo JOBS=$JOBS
 %{~ else}
     JOBS=${PARALLEL_RUNNER_COUNT}
 %{~ endif }
-    seq 99999 | parallel -j $JOBS -a - 'su ubuntu -c "/home/ubuntu/ephemeral_runner.sh {}" ; rm -rf /home/ubuntu/actions-runner-{} ; sleep 1'
+    echo JOBS=$JOBS
+    if [ $JOBS -ge 1 ]; then
+      seq 99999 | parallel -j $JOBS -a - 'su ubuntu -c "/home/ubuntu/ephemeral_runner.sh {}" ; rm -rf /home/ubuntu/actions-runner-{} ; sleep 1'
+    fi
 - path: /etc/systemd/system/this.service
   content: |
     [Unit]
@@ -64,6 +69,19 @@ write_files:
     ExecStart=/home/ubuntu/ephemeral_runner_svc.sh
     [Install]
     WantedBy=multi-user.target
+%{~ if length(CLOUDWATCH_LOG_GROUP) > 0 }
+- path: awslogs.conf
+  content: |
+    [general]
+    state_file = /var/awslogs/state/agent-state
+    [/var/log/syslog]
+    datetime_format = %Y-%m-%d %H:%M:%S
+    file = /var/log/syslog
+    buffer_duration = 5000
+    log_stream_name = {instance_id}
+    initial_position = start_of_file
+    log_group_name = ${CLOUDWATCH_LOG_GROUP}/var/log/syslog
+%{~ endif }
 %{~ for X in WRITE_FILES }
 - ${X}
 %{~ endfor }
@@ -74,6 +92,10 @@ runcmd:
 %{~ for X in RUNCMDS }
 - ${X}
 %{~ endfor }
+%{~ if length(CLOUDWATCH_LOG_GROUP) > 0 }
+- curl -s https://s3.amazonaws.com/aws-cloudwatch/downloads/latest/awslogs-agent-setup.py -O
+- python2 ./awslogs-agent-setup.py -r ${REGION} -n -c awslogs.conf
+%{~ endif }
 # ##########################################
 # ########################################## 
 - echo ==== ACTIONS-RUNNER ====
@@ -81,7 +103,7 @@ runcmd:
 - mkdir actions-runner && cd actions-runner
 - curl -s https://github.com/actions/runner/releases | grep -o -E "https://github.*actions-runner-linux-x64-[0-9\.]+.tar.gz" | sort | uniq > versions.txt
 - RUNNER_FILE_LINK=`cat versions.txt | tail -n1`
-- curl -o actions-runner-linux-x64.tar.gz -L $RUNNER_FILE_LINK
+- curl -s -o actions-runner-linux-x64.tar.gz -L $RUNNER_FILE_LINK
 - tar xzf ./actions-runner-linux-x64.tar.gz
 - cd ..
 - mv actions-runner /home/ubuntu/actions-runner
