--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,6 @@
 name: main
 
-on:
-  pull_request:
-    types:
-      - opened
-  push:
+on: [workflow_dispatch, pull_request]
 
 env:
   AWS_REGION: eu-west-1
