--- a/.github/workflows/pr-title.yml
+++ b/.github/workflows/pr-title.yml
@@ -1,11 +1,6 @@
 name: 'Validate PR title'
 
-on:
-  pull_request_target:
-    types:
-      - opened
-      - edited
-      - synchronize
+on: [workflow_dispatch, pull_request]
 
 jobs:
   main:
