--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,27 +5,7 @@
 # pre-commit install
 # pre-commit run --all-files
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.3.0
-    hooks:
-      - id: check-added-large-files
-      - id: check-case-conflict
-      - id: check-merge-conflict
-      - id: detect-private-key
-      - id: end-of-file-fixer
-      - id: mixed-line-ending
-      - id: name-tests-test
-      # Causes PRs to main to fail
-      #- id: no-commit-to-branch
-      #  args: [--branch, develop, --branch, main]
-      - id: requirements-txt-fixer
-  - repo: local
-    hooks:
-      - id: terraform init
-        name: terraform init
-        entry: terraform init
-        language: system
-        pass_filenames: false
+  # TERRAFORM
   - repo: https://github.com/antonbabenko/pre-commit-terraform
     rev: v1.74.1
     hooks:
@@ -50,6 +30,7 @@ repos:
           - '--args=--only=terraform_required_providers'
           - '--args=--only=terraform_standard_module_structure'
           - '--args=--only=terraform_workspace_remote'
+  #PYTHON
   - repo: https://github.com/psf/black
     rev: 22.6.0
     hooks:
@@ -58,11 +39,23 @@ repos:
     rev: 5.0.4
     hooks:
     - id: flake8
-  - repo: local
+  #PRECOMMIT
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.3.0
     hooks:
-      - id: pytest
-        name: pytest
-        entry: bash -c 'pytest -m "not slow"'
-        language: system
-        always_run: true
-        pass_filenames: false
+      - id: check-added-large-files
+      - id: check-ast
+      - id: check-byte-order-marker
+      - id: check-case-conflict
+      - id: check-merge-conflict
+      - id: debug-statements
+      - id: detect-aws-credentials
+        args: ['--allow-missing-credentials']
+      - id: detect-private-key
+      - id: end-of-file-fixer
+      - id: mixed-line-ending
+        args: ['--fix=lf']
+      # Causes PRs to main to fail
+      - id: no-commit-to-branch
+      - id: requirements-txt-fixer
+      - id: trailing-whitespace
