--- a/.tfdocs-config.yml
+++ b/.tfdocs-config.yml
@@ -79,7 +79,7 @@ settings:
   hide-empty: false
   html: true
   indent: 3
-  lockfile: true
+  lockfile: false
   read-comments: true
   required: true
   sensitive: true
