--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on: [workflow_dispatch, pull_request]
 
 env:
   AWS_REGION: eu-west-1
-  AWS_ROLE: cat-genrl-prd-infra-gh-tf-aws-github-runners
+  AWS_ROLE: arn:aws:iam::353444730604:role/cat-genrl-prd-infra-github-workflows
 
 permissions:
   id-token: write
@@ -67,8 +67,6 @@ jobs:
       - uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-region: ${{ env.AWS_REGION }}
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           role-to-assume: ${{ env.AWS_ROLE }}
           role-duration-seconds: 3600
       - uses: actions/setup-python@v2
